<resources>
    <string name="app_name">RunningApp</string>

    <!-- Login/Registration String Values -->
    <string name="title_activity_maps">Map</string>
    <string name="login_title">Naruto Run</string>
    <string name="username">Username</string>
    <string name="user_email">Email Address</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Create Account</string>
    <string name="forgot_pass_link">Forgot Password?</string>
    <string name="new_user_link">User Registration</string>
    <string name="user_fn">First Name</string>
    <string name="user_ln">Last Name</string>
    <string name="register_title">New User Registration</string>
    <string name="login_link_label">Already a User? Sign in</string>
    <string name="here_link">here</string>
    <string name="birthday">Date of Birth:</string>
    <string name="date_format">mm/dd/yyyy</string>

    <!-- Password Reset Values -->
    <string name="reset_password">Reset Password</string>
    <string name="return_login_label">Return to Login Screen</string>
    <!-- Settings Bar String Values -->
    <string name="profile">Profile</string>
    <string name="settings">Account Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Initiate Fragment String Values -->
    <string-array name="modes">
        <item>Run</item>
        <item>Walk</item>
        <item>Hike</item>
        <item>Bike</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="general_settings">General</string>
    <string name="pref_gen_nightMode">pref_gen_nightMode</string>

    <string name="run_settings">Run Settings</string>
    <string name="distUnit">Distance Unit</string>
    <string name="pref_run_distUnit">pref_run_distUnit</string>
    <string name="segment_length">Segment Length</string>
    <string name="pref_segLength">pref_segLength</string>
    <string name="intervalLength">Sprint Interval Length</string>
    <string name="pref_intervalLength">pref_intervalLength</string>
    <string name="pref_segSwitch">pref_segSwitch</string>
    <string name="title_segSwitch">Turn on Segments</string>

    <!-- Default Value -->
    <string name="default_unit">Miles</string>

    <!-- Service Descriptions -->
    <string name="service_desc">Service for tracking location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>