<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_gen_nightMode"
            android:title="Night Mode" />


    </PreferenceCategory>


    <PreferenceCategory app:title="@string/run_settings">

        <ListPreference
            android:defaultValue="@string/default_unit"
            android:entries="@array/unit_entries"
            android:entryValues="@array/unit_entries"
            android:key="@string/pref_run_distUnit"
            android:title="@string/distUnit" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_segSwitch"
            android:title="@string/title_segSwitch" />

        <EditTextPreference
            android:key="@string/pref_segLength"
            android:title="@string/segment_length"
            android:dependency="@string/pref_segSwitch"/>

        <EditTextPreference
            android:key="@string/pref_intervalLength"
            android:title="@string/intervalLength"
            />

    </PreferenceCategory>

</PreferenceScreen>