<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/register_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="65dp"
        />
    <EditText
        android:id="@+id/user_firstname"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_fn"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_below="@id/register_banner"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/user_lastname"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/user_firstname"
        android:hint="@string/user_ln"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_below="@id/register_banner"
        android:layout_marginStart="5dp"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_firstname"
        android:text="@string/birthday"
        android:textSize="20sp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="9dp"
        />

    <EditText
        android:id="@+id/birthday_date"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_below="@id/user_firstname"
        android:layout_toEndOf="@id/birthday_label"
        android:hint="@string/date_format"
        android:inputType="date"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/rg_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/birthday_date"
        android:hint="@string/username"
        android:inputType="text"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/rg_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rg_username"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/rg_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rg_email"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        />

    <Button
        android:id="@+id/rg_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rg_password"
        android:text="@string/register_button"
        android:textSize="16sp"
        android:background="@color/teal_200"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_button"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login_link"
        />

</RelativeLayout>