<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="65dp"
        />

    <EditText
        android:id="@+id/reset_password_email_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/user_email"
        android:textSize="24sp"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/reset_password_email_field"
        android:text="@string/reset_password"
        android:textSize="20sp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_button"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/return_login_label"
        />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_button"
        android:layout_toEndOf="@id/login_text"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="4dp"
        android:text="@string/here_link"
        android:textColor="@color/teal_700"
        />

</RelativeLayout>